--- a/index.html
+++ b/index.html
@@ -8,13 +8,18 @@
     <link rel="stylesheet" href="./css/style.css">
 </head> 
 <body>
+    <header>
+
+    </header>
     <main>
         <section>
         <section class="box" id="red">
+            <img src="img/lua-superior-um-Kokushibo-demon-slayer.jpg">
             <p>vermelho</p>
         </section>
 
         <section class="box" id="green"> 
+            <img src="img/lua-superior-dois-doma-demon-slayer.jpg">
             <p>verde</p>
         </section>
 
@@ -51,5 +56,9 @@
         </section>
         </section>
     </main>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
